--- a/api/package.json
+++ b/api/package.json
@@ -2,13 +2,5 @@
   "name": "tbrl-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node api/index.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0"
-  }
+  "license": "MIT"
 }
