--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/create-payment", "dest": "api/index.js" },
-    { "src": "/check-status/(.*)", "dest": "api/index.js" }
+    {
+      "src": "/api",
+      "dest": "/api/index.js"
+    }
   ]
 }
